# binary-cpp-library

./: .gitignore  CMakeLists.txt  README.md
binary/: binary.h  binary.hpp
include/kojo/: binary.hpp  binary_new.hpp
include/kojo/binary/: error.hpp
src/: binary.cpp  error.cpp
